# BestCam

./: Activator.h  BestCamHost.cpp  BestCamSource.def  CMakeLists.txt  DllMain.cpp  FrameServer.cpp  FrameServer.h  Logger.h  MediaSource.cpp  MediaSource.h  MediaStream.cpp  MediaStream.h  README.md  README2.md  WebcamBridge.spec  WebcamBridge_Setup.iss  companion.py  license.txt  reference_companion.py
android/: .gitignore  LICENSE  README.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/example/bestcam/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/bestcam/: CameraManager.kt  MainActivity.kt  MjpegServer.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/example/bestcam/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
